<resources>
    <string name="app_name">Orion</string>
    <string name="button_login">LOGIN</string>
    <string name="Welcome">Welcome</string>
    <string name="id_email">Email</string>
    <string name="password">Password</string>
    <string name="test">Interface</string>
    <string name="creer">CREATE</string>
    <string name="mon_profil">My profile</string>
    <string name="retour">back</string>
    <string name="Start">Start</string>
    <string name="Btn_conv">Conversation</string>
    <string name="Name">Name</string>
    <string name="Surname">Last Name</string>
    <string name="logout">LogOut</string>
    <string name="passwordforgot">Password Forgot</string>
    <string name="send">SEND</string>
    <string name="classe">Class</string>
    <string name="bio">Biography</string>
    <string name="RS">Social Network</string>
    <string name="club">Club</string>
    <string name="hobbies">Hobbies</string>
    <string name="identite">Identity</string>
    <string name="btnedit">BtnEdit</string>
    <string name="btnback">BtnBack</string>
    <string name="pdp">pdp</string>
    <string name="logo">logo</string>
    <string name="conversation">conversation</string>
    <string name="other_profile">other profile</string>
    <string name="back">back</string>
    <string name="favoris">favoris</string>
    <string name="add_favorite">add favorite</string>
    <string name="send_message">send message</string>
    <string name="favorite">Favorite</string>
    <string name="Type_a_message">Favorite</string>
    <string name="last_conversation">Last Conversation</string>
    <string name="recherche">Recherche</string>
    <string name="logo_linkedin">logo linkedIn</string>
    <string name="bouton_recheche">bouton_recheche</string>
    <string name="groupe">groupe</string>

    <string-array name="ListeClasse">
        <item>Class</item>
        <item>E1A</item>
        <item>E1B</item>
        <item>E2A</item>
        <item>E2B</item>
        <item>E3E</item>
        <item>E3S</item>
        <item>E3T</item>
        <item>E3FE Embedded System</item>
        <item>E3FG Industrial Engineering</item>
        <item>E3FR Network and Security</item>
        <item>E3FI Computers and Applications</item>
        <item>E3FT Energy</item>
        <item>E3IMAC</item>
        <item>E3 Mechanical Engineering</item>
        <item>E3 Electronics and Computing</item>
        <item>E3 IT, Design, Architecture and Development</item>
        <item>E3 Civil Engineering</item>
        <item>E3 Maintenance and Reliability of Industrial Processes</item>

        <item>E4SE Embedded System</item>
        <item>E4SEI Intelligent Electronic System</item>
        <item>E4GI Industrial Engineering</item>
        <item>E4CYB Cybersecurity</item>
        <item>E4INFO Computer Science</item>
        <item>E4DSIA Data Science and Artificial Intelligence</item>
        <item>E4AIC Artificial Intelligence and Cybersecurity</item>
        <item>E4ENE Energy</item>
        <item>E4BIO Biotechnologies and E-health</item>
        <item>E4FE Embedded System</item>
        <item>E4FG Industrial Engineering</item>
        <item>E4FR Network and Security</item>
        <item>E4FI Computers and Applications</item>
        <item>E4FT Energy</item>
        <item>E4IMAC</item>
        <item>E4 Mechanical Engineering</item>
        <item>E4 Electronics and Computing</item>
        <item>E4 IT, Design, Architecture and Development</item>
        <item>E4 Civil Engineering</item>
        <item>E4 Maintenance and Reliability of Industrial Processes</item>

        <item>E5SE Embedded System</item>
        <item>E5SEI Intelligent Electronic System</item>
        <item>E5GI Industrial Engineering</item>
        <item>E5CYB Cybersecurity</item>
        <item>E5INFO Computer Science</item>
        <item>E5DSIA Data Science and Artificial Intelligence</item>
        <item>E5AIC Artificial Intelligence and Cybersecurity</item>
        <item>E5ENE Energy</item>
        <item>E5BIO Biotechnologies and E-health</item>
        <item>E5FE Embedded System</item>
        <item>E5FR Network and Security</item>
        <item>E5FT Energy</item>
        <item>E5FG Industrial Engineering</item>
        <item>E5FI Computers and Applications</item>
        <item>E5IMAC</item>
        <item>E5 Mechanical Engineering</item>
        <item>E5 Electronics and Computing</item>
        <item>E5 IT, Design, Architecture and Development</item>
        <item>E5 Civil Engineering</item>
        <item>E5 Maintenance and Reliability of Industrial Processes</item>
        <item>Alumni</item>
    </string-array>

</resources>