<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PageMonProfilActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/Btnback"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/backbutton"
            android:contentDescription="@string/btnback"
            android:scaleType="fitCenter"
            android:background="@color/white"/>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/otheruserpdp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/pdp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/avatar_base" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">


        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/favoris"
            android:id="@+id/favoris"
            android:layout_marginStart="30dp"
            app:srcCompt="@drawable/epingler"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_favorite"
            android:textColor="@color/black"
            android:fontFamily="@font/arial"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:text="@string/add_favorite"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/favoris"
            android:id="@+id/sendImage"
            android:layout_marginStart="100dp"
            app:srcCompt="@drawable/epingler"
            android:scaleType="fitCenter" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg"
            android:textColor="@color/black"
            android:fontFamily="@font/arial"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:text="@string/send_message"/>



    </LinearLayout>

    <TextView
        android:id="@+id/identite_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/biographie_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:text="@string/bio"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/bio_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/classe_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classe"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/arial"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/classe_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/email_text_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:text="@string/id_email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/email_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:textSize="15sp" />


    <ProgressBar
        android:id="@+id/progessBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
    </ProgressBar>

    <TextView
        android:id="@+id/club_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/club"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/arial"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/club_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/loisir_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobbies"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/arial"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/hobbies_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/res_so_other"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RS"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/arial"
        android:textStyle="bold"/>

</LinearLayout>