<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PageMonProfilActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageButton
            android:id="@+id/Btnback"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/backbutton"
            android:contentDescription="@string/btnback"
            android:scaleType="fitCenter"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/boldthick"
            android:hint="@string/mon_profil"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/BtnEdit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:contentDescription="@string/btnedit"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/editbutton" />
    </LinearLayout>

    <ImageView
        android:id="@+id/userpdp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/pdp" />

    <TextView
        android:id="@+id/identite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="25sp"
        android:visibility="gone"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/biographie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:text="@string/bio"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/bio_change"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:layout_marginStart="15dp"/>


    <TextView
        android:id="@+id/classe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/classe"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/arial"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/classe_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:text="@string/id_email"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:layout_marginStart="15dp"/>


    <TextView
        android:id="@+id/club"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/club"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/arial"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/club_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/loisir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hobbies"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/arial"

        android:layout_marginStart="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/hobbies_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/res_so"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RS"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:fontFamily="@font/arial"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:textStyle="bold"/>

</LinearLayout>