<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    tools:context=".Chat"
    android:orientation="vertical" >


    <ImageButton
        android:id="@+id/Btnback"
        android:layout_width="52dp"
        android:layout_height="56dp"
        android:layout_marginStart="15dp"
        android:background="@color/white"
        android:contentDescription="@string/btnback"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/backbutton"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="30dp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_marginTop="558dp"
        android:background="@color/material_dynamic_primary20">

        <EditText
            android:layout_width="300dp"
            android:layout_height="49dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:background="@color/material_dynamic_primary10"
            android:hint="@string/Type_a_message"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/black"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/send_message"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:background="@color/material_dynamic_primary20"
            android:contentDescription="@string/mon_profil"
            android:scaleType="centerInside"
            android:visibility="visible"
            app:shapeAppearanceOverlay="@style/Cercle"
            tools:srcCompat="@drawable/icone_envoie_message" />


    </LinearLayout>


</LinearLayout>